--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -69,6 +69,7 @@ add_link_options(-T ${LINKER_SCRIPT})
 # Build
 #################################
 
+add_executable(bm_matmul bm_matmul.c)
 add_executable(dma dma.c)
 add_executable(pwm pwm.c)
 add_executable(blkdev blkdev.c)
@@ -108,6 +109,7 @@ function(add_dump_target target_name)
     add_dependencies(dump ${target_name}-dump)
 endfunction()
 
+add_dump_target(bm_matmul)
 add_dump_target(dma)
 add_dump_target(pwm)
 add_dump_target(blkdev)
