--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -91,6 +91,7 @@ add_executable(symmetric symmetric.c)
 add_executable(bm_matmul bm_matmul.c)
 add_executable(bm_2Dconvo bm_2Dconvo.c)
 add_executable(bm_matmulvec bm_matmulvec.c)
+add_executable(matmul_distortion matmul_distortion.c)
 
 #################################
 # Disassembly
@@ -133,6 +134,7 @@ add_dump_target(symmetric)
 add_dump_target(bm_matmul)
 add_dump_target(bm_2Dconvo)
 add_dump_target(bm_matmulvec)
+add_dump_target(matmul_distortion)
 
 
 # Add custom command to generate spiflash.img from spiflash.py
